добавил индикатор загрузки карточкам

--- a/src/blocks/film/__poster/film__poster.css
+++ b/src/blocks/film/__poster/film__poster.css
@@ -1,3 +1,20 @@
 .film__poster {
-  
+  display: block;
+  position: relative;
+}
+
+.film__poster::before {
+  display: block;
+  content: '';
+  background-color: #ffff00;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 100;
+}
+
+.film__poster:hover::before {
+  opacity: 1;
 }
