--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,8 @@
 @import url(./blocks/form/__submit-button/form__submit-button.css);
 
 /* Film elements */
+@import url(./blocks/film/__poster-wrapper/film__poster-wrapper.css);
+@import url(./blocks/film/__poster/film__poster.css);
 
 /* Popup elements */
 @import url(./blocks/popup/__overlay/popup__overlay.css);
