--- a/src/blocks/film/__poster/film__poster.css
+++ b/src/blocks/film/__poster/film__poster.css
@@ -1,12 +1,15 @@
 .film__poster {
   display: block;
   position: relative;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 .film__poster::before {
   display: block;
   content: '';
-  background-color: #ffff00;
+  background-color: #fff;
   position: absolute;
   top: 0;
   left: 0;
