--- a/src/blocks/form/__input/form__input.css
+++ b/src/blocks/form/__input/form__input.css
@@ -1,6 +1,13 @@
 .form__input {
-  width: 40%;
-  border: 1px solid black;
-  padding: 0;
+  width: 400px;
+  border: 0;
+  padding: 15px;
   margin: 0;
+  font-size: 25px;
+  outline: 0;
+  border-bottom: 1px solid #ccc;
+}
+
+.form__input:focus {
+  outline: 1px solid #ccc;
 }
