--- a/src/blocks/popup/__overlay/popup__overlay.css
+++ b/src/blocks/popup/__overlay/popup__overlay.css
@@ -1,7 +1,7 @@
 .popup__overlay {
   position: fixed;
-  background-color: #ccc;
-  opacity: 0.5;
+  background-color: #000;
+  opacity: 0.8;
   width: 100%;
   height: 100%;
   z-index: -1;
