--- a/src/blocks/content/__heading/content__heading.css
+++ b/src/blocks/content/__heading/content__heading.css
@@ -2,7 +2,7 @@
   font-size: 70px;
   width: 50%;
   margin: 100px auto 60px;
-  background: #fff;
+  background: transparent;
 }
 
 .content__heading span {
