--- a/src/blocks/form/form.css
+++ b/src/blocks/form/form.css
@@ -3,5 +3,17 @@
   justify-content: center;
   width: 100%;
   height: 50px;
-  margin: 120px 0;
+  margin: 100px 0;
+}
+
+@media (max-width: 800px) {
+  .form {
+    margin: 30px 0;
+  }
+}
+
+@media (max-width: 600px) {
+  .form {
+    margin: 15px 0;
+  }
 }
