--- a/src/blocks/popup/__container/popup__container.css
+++ b/src/blocks/popup/__container/popup__container.css
@@ -6,3 +6,12 @@
   display: flex;
   border-radius: 10px;
 }
+
+@media (max-width: 800px) {
+  .popup__container {
+    width: 100%;
+    flex-direction: column;
+    padding: 15px;
+    overflow: scroll;
+  }
+}
